test/compilable/imports/test71.d
module imports.test71;
import imports = object;

void foo()
{
}
