test/fail_compilation/fail163.d

void foo()
{
    char[] p;
    const(char)[] q;

    p = q;
}
